--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Flask-SocketIO==5.5.1
 flatbuffers==25.1.24
 fonttools==4.54.1
 greenlet==3.2.2
+gunicorn==23.0.0
 h11==0.16.0
 itsdangerous==2.2.0
 jax==0.5.0
